--- a/view/personal.html
+++ b/view/personal.html
@@ -14,6 +14,7 @@
             <button id="btnLogout">登出</button>
         </div>
         <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/js-cookie.js"></script>
         <script>
             $(document).ready(function () {
                 $.ajax({
