--- a/view/unlogin.html
+++ b/view/unlogin.html
@@ -30,7 +30,7 @@
                     sec--;
                     if (sec < 0) {
                         clearInterval(timer);
-                        location.href = '/login.html';
+                        location.href = 'login.html';
                     }
                 }, 1000)
             })
