--- a/view/personal.html
+++ b/view/personal.html
@@ -41,7 +41,7 @@
 
 
                 $.ajax({
-                    url: 'http://localhost:3000/profile',
+                    url: 'http://10.30.29.60:80/php_test1/server.php',
                     type: 'GET',
                     dataType: 'json',
                     xhrFields:{withCredentials:true},
